2012-01-10  Ivy Foster  <joyfulgirl@archlinux.us>

	* 20110110-1:
	- Now in AUR, not [community]
	- No longer fetch a fixed commit (uses standard	
	  makepkg+git handling)
	- New maintainer: Ivy Foster (joyfulgirl)