@@ -3,7 +3,7 @@
 # Contributor: Heeru Kiyura <M8R-p9i5nh@mailinator.com>
 
 pkgname=conkeror-git
-pkgver=20120110
+pkgver=20120210
 pkgrel=1
 pkgdesc="A highly programmable web browser based on Mozilla XULRunner."
 arch=('any')
@@ -39,6 +39,7 @@ build() {
   [ -d "$srcdir"/${_gitname}-build ] && rm -rf "$srcdir"/${_gitname}-build
   git clone "$srcdir"/${_gitname} "$srcdir"/${_gitname}-build
   cd "$srcdir"/${_gitname}-build
+  make
 }
 
 package() { 
@@ -52,8 +53,11 @@ package() {
   install -Dm644 "$srcdir"/${_gitname}-build/debian/conkeror.desktop \
     "$pkgdir"/usr/share/applications/conkeror.desktop
   install -Dm644 "$srcdir"/conkeror_gimpfile.xpm "$pkgdir"/usr/share/pixmaps
+
   install -Dm755 "$srcdir"/conkeror.sh "$pkgdir"/usr/bin/conkeror
 
+  mv "$pkgdir"/usr/share/conkeror/conkeror-spawn-helper "$pkgdir"/usr/bin
+  rm "$pkgdir"/usr/share/conkeror/conkeror-spawn-helper.c
   rm -r "$pkgdir"/usr/share/conkeror/contrib/man
   rm -r "$pkgdir"/usr/share/conkeror/debian
 } 
