@@ -7,7 +7,7 @@ pkgbase=linux-ec2
 pkgname='linux-ec2'       # Build kernel with a different name
 _kernelname=${pkgname#linux}
 _basekernel=3.2
-pkgver=${_basekernel}.1
+pkgver=${_basekernel}.5
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/martinkozak/linux-ec2"
@@ -25,7 +25,7 @@ source=("http://www.kernel.org/pub/linux/kernel/v3.x/linux-3.2.tar.xz"
         'i915-gpu-finish.patch'
         'xen-xsave.patch')
 md5sums=('364066fa18767ec0ae5f4e4abcf9dc51'
-         '62ac6ac9b870162f693ecf5e8606423a'
+         '89cb9fb7ed01dccb15510435fb1e5024'
          'd75a5844160ae83fe0704a86edd2c6f5'
          '24557c9eade2e6ecb632f16924741c7b'
          '9d3c56a4b999c8bfbd4018089a62f662'
