@@ -2,7 +2,7 @@
 # arg 2:  the old package version
 
 KERNEL_NAME=-ec2
-KERNEL_VERSION=3.2.1-1-ec2
+KERNEL_VERSION=3.2.5-1-ec2
 
 post_install () {
   # updating module dependencies
