@@ -1,7 +1,7 @@
 # Maintainer: Igor Duarte Cardoso <igordcard@gmail.com>
 pkgname=log2log
 pkgver=1.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Can't download Meebo chat logs? Shot that Adium duck? Pidgin poop? Log2Log: The all-in-one solution to chat log conversion!"
 arch=('i686' 'x86_64')
 url="https://sourceforge.net/projects/log2log/"
@@ -16,10 +16,10 @@ md5sums=('5b9334061a1ebd1ed75ef3f5d6b62e09')
 build() {
   cd "$srcdir/$pkgname-$pkgver"
   qmake
-  make
+  make DESTDIR=${pkgdir}
 }
 
 package() {
   cd "$srcdir/$pkgname-$pkgver"
-  make install
+  sudo make install
 }
