@@ -1,3 +1,8 @@
+2012-02-10  Ivy Foster  <joyfulgirl@archlinux.us>
+
+	* 20110210-1:
+	- Added conkeror-spawn-helper to /usr/bin
+
 2012-01-10  Ivy Foster  <joyfulgirl@archlinux.us>
 
 	* 20110110-1:
